@@ -1,0 +1,7 @@
+class HomeAction < Cramp::Action
+  def start
+    render "Hello World!"
+    finish
+  end
+end
+
