@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>nirvana</title>
+    <title>termvana</title>
     <link href='css/jquery.repl.css' rel='stylesheet' type='text/css'>
     <link href='css/nirvana.css' rel='stylesheet' type='text/css'>
     <script src='js/jquery.min.js' type='text/javascript'></script>
@@ -17,18 +17,19 @@
             startCompletion: $.ws.nirvanaComplete
           }).repl({
             resultPrompt: '',
-            startMessage: function() { return '$ nirvana' },
+            startMessage: function() { return '$ termvana' },
             spinner: 'images/spinner.gif',
             loop: function(val) {
               $.readline.addHistory(val);
               $.ws().send(val);
             }
-        });
+            });
+        $(window).click(function(){ $('#input').focus(); });
       });
     </script>
   </head>
-  <body>
-    <form>
+  <body class="termkitCommandView">
+    <form id="terminal">
       <input id='input' type='text'>
     </form>
   </body>
