@@ -1,7 +1,7 @@
 (function($) {
   if (!('WebSocket' in window)) { alert("This browser does NOT support websockets and thus nirvana fail :("); }
 
-  var ws = new WebSocket("ws://127.0.0.1:8080");
+  var ws = new WebSocket("ws://127.0.0.1:3000/socket");
   ws.onmessage = function(e) {
     var data = e.data;
     if (data.match(/^:AUTOCOMPLETE:/)) {
