@@ -5,6 +5,7 @@
 assign foo)
 _ Served as rack app instead of via file:// urls
 _ Initial cucumber testing
+_ Don't die on long running programs
 
 == 0.1.1
 * Add commandline options via a Runner
